<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/exit_bg_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@null"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_btn"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:paddingVertical="@dimen/_14sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/topConstraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="@id/topConstraint"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:singleLine="true"
        android:textStyle="bold"
        android:text="@string/how_was_your_overall_experience"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/topConstraint"
        app:layout_constraintTop_toBottomOf="@id/topConstraint"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/titleDetail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:singleLine="true"
        android:text="@string/tell_us_the_problems_you_meet"
        android:textColor="#E4EDEDED"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/titleDetail"
        app:layout_constraintTop_toBottomOf="@id/titleDetail"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/can_t_lock_screen"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:buttonTint="@color/white"
        android:textStyle="bold"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/titleDetail2"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail2"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/feature_not_working"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:buttonTint="@color/white"
        android:textStyle="bold"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/do_not_show_the_wallpaper"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:buttonTint="@color/white"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/do_not_display_on_my_phone"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:buttonTint="@color/white"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/difficult_to_use"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"
        android:buttonTint="@color/white"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/slow_speed"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:buttonTint="@color/white"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/others"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:buttonTint="@color/white"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/topConstraint"
        app:layout_constraintStart_toStartOf="@id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_140sdp"
        android:background="@drawable/rect_menu_edit_trans"
        android:ems="10"
        android:gravity="start|top"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_11sdp"
        android:hint="@string/type_answer_her"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textColorHint="#E4EDEDED"
        android:textColor="#E4DDDDDD"
        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
        app:layout_constraintStart_toStartOf="@+id/checkBox7"
        app:layout_constraintTop_toBottomOf="@id/checkBox7" />


    <TextView
        android:id="@+id/uploadTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/upload_picture"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="@id/editTextText"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/uploadTitleFrame"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="@dimen/_40sdp"
        android:background="@drawable/rect_menu_edit_trans"
        app:layout_constraintStart_toStartOf="@id/uploadTitle"
        app:layout_constraintTop_toBottomOf="@id/uploadTitle"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/sendFeedBack"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/send_btn"
        android:text="@string/send"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>