<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/in_app_bg">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/closeTop"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_30sdp"
        app:srcCompat="@drawable/close_btn"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/crown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.54"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/unlimited_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF005C"
        android:text=""
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/crown"
        app:layout_constraintStart_toStartOf="@id/crown"
        app:layout_constraintEnd_toEndOf="@id/crown"
        android:layout_marginStart="@dimen/_10sdp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/premiumButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/rect_btn_loading"
        android:text="@string/purchase"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



    <TextView
        android:id="@+id/closeIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="#585858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premiumButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_commitment_cancel_anytime"/>


      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ads_lay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
          android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/animation"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="#00FFFFFF"
            android:text="@string/loading_ad"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@id/animation"
            app:layout_constraintStart_toStartOf="@id/animation"
            app:layout_constraintTop_toBottomOf="@id/animation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>