<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/rect_menu_bg_dialog"
    app:cardCornerRadius="@dimen/_10sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:drawable/ic_delete"
            android:backgroundTint="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:text="@string/no_connection"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/connection_detail"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TextView
                android:id="@+id/cancl_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_weight="1"
                android:text="@string/wi_fi"
                android:background="@drawable/rect_btn_intro_new_new"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/cnfrm_del_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/rect_yes_new"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/mobile_data"
                android:textColor="@color/splashBgColor"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
